tests/schemas/valid/user-board-todo.prisma
generator client {
  provider = "prisma-client"
  output   = "../../generated/prisma"
}

generator prismaIDBrowser {
  provider   = "idb-client-generator"
  output     = "../../generated/prisma-idb"
  outboxSync = true
  exclude    = ["Session", "Verification", "Account", "Changelog"]
  rootModel  = "User"
}

datasource db {
  provider = "postgresql"
}

model User {
  id            String    @id
  name          String
  email         String
  emailVerified Boolean   @default(false)
  image         String?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  sessions      Session[]
  accounts      Account[]
  boards        Board[]

  @@unique([email])
  @@map("user")
}

model Session {
  id        String   @id
  expiresAt DateTime
  token     String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([token])
  @@index([userId])
  @@map("session")
}

model Account {
  id                    String    @id
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  @@index([userId])
  @@map("account")
}

model Verification {
  id         String   @id
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([identifier])
  @@map("verification")
}

model Changelog {
  id        String          @id @default(uuid(7))
  model     String
  keyPath   Json
  operation ChangeOperation
  version   Int?
  scopeKey  String
  createdAt DateTime        @default(now())

  @@index([model, id])
}

enum ChangeOperation {
  create
  update
  delete
}

model Board {
  id        String   @id @default(uuid())
  name      String
  createdAt DateTime @default(now())
  todos     Todo[]

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId String
}

model Todo {
  id          String   @id @default(uuid())
  title       String
  description String?
  isCompleted Boolean  @default(false)
  createdAt   DateTime @default(now())

  board   Board  @relation(fields: [boardId], references: [id], onDelete: Cascade)
  boardId String
}
